2008-06-10  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion/admin/gtk/Makefile.am:
	Added debugmarkerview.py

2008-06-06  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/componentlist.py:
	Remove the column header and label and reduce the size
	of the icon to be 24x24 instead of 40x40.
	Fixes #171

2008-06-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/base/Makefile.am:
	Add properties.glade here
	* po/POTFILES.in:
	And newly added files here

2008-06-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/componentview.py:
	* flumotion/component/base/Makefile.am:
	* flumotion/component/base/admin_gtk.py:
	* flumotion/component/base/base.xml:
	* flumotion/component/base/properties.glade:
	* flumotion/component/base/propertiesnode.py:
	Add a Properties Tab which is only visible in debug mode.
	First part of #832

2008-06-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/base/component.glade:
	* flumotion/component/base/componentnode.py:
	Add component type to the UI, fixes #987

2008-06-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/producers/bttv/wizard_gtk.py
	(TVCardStep.setup): Tweak last commit: avoid using a different
	combobox mode, just set an empty string, prevents errors
	when we get real values here.

	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/conversionsteps.py:
	Do not call workerChanged each time a step is activated,
	add a convinience method on the wizard to check if it didn't
	change. Fixes #992

2008-06-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/producers/soundcard/wizard_gtk.py
	(SoundcardStep._update_inputs.checkFailed): trap RemoteRunFailure

	* flumotion/admin/gtk/message.py (MessagesView.addMessage):
	Reuse the firstButton
	(MessagesView._sortMessages): Return the first button sorted

	* flumotion/component/producers/bttv/wizard.glade: Rename
	tvnorm to signal.

	* flumotion/component/producers/bttv/wizard_gtk.py